8274934: Attempting to acquire lock JNICritical_lock/41 out of order with lock MultiArray_lock/41

Reviewed-by: dcubed, iklam